[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "octopize.avatar"
# Also modify avatars/__init__.py
version = "0.7.3"
description = "Python client for Octopize's avatar API"
authors = ["Octopize <pypi-octopize@octopize.io>"]
license = "Apache-2.0"
packages = [{ include = "avatars" }]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.23.0"
pydantic = "^2"
pandas = "^1.4.2"
toolz = "^0.12.0"
pyarrow = "^14.0.1"


[tool.poetry.group.doc.dependencies]
Sphinx = "^5.0.0"
sphinx-autodoc-typehints = "^1.18.1"
beautifulsoup4 = "^4.11.1"
furo = "^2023.03.27"
sphinx-multiversion = "^0.2.4"
autodoc-pydantic = "^2"


[tool.poetry.group.dev.dependencies]
blacken-docs = "^1.12.1"
typer = "^0.4.1"
black = { extras = ["jupyter"], version = "^24.3.0" }
isort = "^5.10.1"
bandit = "^1.7.4"
mypy = "^1.4"
pytest = "^7.2.0"
jupytext = "^1.14.2"
nbconvert = "^7.2.6"
flake8 = "^6.0.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.tutorial.dependencies]
seaborn = "^0.12.1"
matplotlib = "^3.6.2"
ipykernel = "^6.19.2"
missingno = "^0.5.1"
notebook = "^6.5.6"


[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
profile = "black"

[tool.mypy]
python_version = "3.9"
plugins = ["pydantic.mypy"]
strict = true
exclude = "(tmp|.venv)"


[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if __name__ == .__main__.:",
  "nocov",
  "if TYPE_CHECKING:",
]
omit = ["**/*_test.py"]

[tool.coverage.run]
branch = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true


[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "toolz.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyarrow.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
"error",
"ignore::pytest.PytestUnraisableExceptionWarning",
"ignore:np.find_common_type is deprecated:DeprecationWarning", # TODO: Remove this once we migrate to pandas v2
]
