[project]
name = "octopize.avatar"
version = "1.0.1"
description = "Python client for Octopize's avatar API"
authors = [{ name = "Octopize", email = "pypi-octopize@octopize.io" }]
license = "Apache-2.0"
packages = [{ include = "avatars" }]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fsspec>=2024.12.0",
    "httpx>=0.28.1",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.2",
    "s3fs>=2024.12.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "toolz>=1.0.0",
    "typer>=0.15.1",
    "octopize-avatar-yaml==0.1.11",
]

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "jupytext>=1.17.0",
    "pytest>=8.3.5",
    "ruff>=0.8.4",
    "pandas-stubs>=2.2.2.240807",
    "types-pyyaml>=6.0.12.20240917",
    "polyfactory>=2.20.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pandas>=2.2.3",
]
notebook = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "octopize-avatar-yaml==0.1.11",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true


[[tool.mypy.overrides]]
module = "toolz.*"
ignore_missing_imports = true


[[tool.mypy.overrides]]
module = "fsspec.*"
ignore_missing_imports = true


[tool.ruff]
extend = "../../ruff.toml"

[tool.uv.workspace]
members = ["tests"]

[tool.pytest.ini_options]
addopts = [
    # Recommended by pytest
    # https://docs.pytest.org/en/stable/explanation/goodpractices.html#tests-outside-application-code
    "--import-mode=importlib",
]
# Recommended by pytest
pythonpath = "src"

[tool.hatch.build.targets.wheel]
packages = ["src/avatars"]
